--- a/notes/limits2.tex
+++ b/notes/limits2.tex
@@ -86,7 +86,10 @@ Thus $\lim_{x\to a}f(x)$ does not exist for any $a$, as desired.
 \subsection{One-sided limits}
 TODO
 
-\subsection{Infinities}
+\subsection{Infinite limits}
+TODO
+
+\subsection{Limits at infinity}
 TODO
 
 %%% Local Variables:
