--- a/notes/continuity2.tex
+++ b/notes/continuity2.tex
@@ -405,8 +405,9 @@ that $f(y)\leq f(x)$ for all $x$.
 
 \vs
 
-Intuitively, even degree polynomials achieve their minimum on $\mathcal{R}$
-(consider the graph $f(x)=x^2$ as a simple example).
+Intuitively, even degree polynomials achieve their minimum on
+$\mathcal{R}$ because when you zoom out enough they are U-shaped (consider the
+graph $f(x)=x^2$ as a simple example).
 
 \vs
 
@@ -450,7 +451,7 @@ $M>1$. Then for all $x<x_1$:
 Similarly let $x_2=2M$. Then for all $x>x_1$:
 \begin{align*}
   f(x)&>x^{n}-M|x^{n-1}|\\
-      &=x^n+Mx^{n-1}\\
+      &=x^n+Mx^{n-1}&&\text{$x$ is positive}\\
       &=x^{n-1}(x+M)\\
       &\geq 2^{n-1}M^n&&\text{substitute $2M$ and simplify}
 \end{align*}
