limits at infinity

--- a/notes/limits2.tex
+++ b/notes/limits2.tex
@@ -118,7 +118,20 @@ looking at both sides of $a$ we say $x>a$ (i.e. we look from right of
 $a$).
 
 \subsection{Limits at infinity}
-TODO
+Consider the function $f(x)=\frac{1}{x}$. Clearly as $x$ gets very
+large, $f(x)$ trends toward zero. Again, we have a notation that
+encodes this property of $f$:
+\[\lim_{x\to\infty}\frac{1}{x}=0\]
+
+Take $l=0$, and this compiles down to the following definition. For
+every $\epsilon>0$ there is a number $N$ such that $|f(x)-l|<\epsilon$ for all
+$x>N$.
+
+\vs
+
+Intuitively, for any $\epsilon$, $f(x)$ will get within $\epsilon$ of the limit for
+$x$ large enough. Here we simply produce a large enough $N$ instead of
+$\delta$.
 
 \subsection{Infinite limits}
 TODO
