infinite limits example

--- a/notes/limits2.tex
+++ b/notes/limits2.tex
@@ -146,7 +146,7 @@ bound on the $x$-axis, within which $f(x)$ is never smaller than $M$.
 
 \vs
 
-Suppose we want to prove $\lim_{x\to0}\frac{1}{x^{2}}=\infty$. Let
+\textbf{Example.} Suppose we want to prove $\lim_{x\to0}\frac{1}{x^{2}}=\infty$. Let
 $M>0$ be given. We must produce $\delta>0$ such that $0<|x|<\delta$ implies
 $\frac{1}{x^2}>M$ for all $x$. Suppose we fix
 $|x|<\frac{1}{\sqrt{M}}$. Then:
