--- a/hw/ch8.tex
+++ b/hw/ch8.tex
@@ -8,6 +8,17 @@ $f(x)=0$? Show that there is a largest $x$ in $[a,b]$ with $f(x)=0$.
 related to $f$.)
 
 \subsection*{Solution}
+There isn't necessarily a second smallest $x$ in $[a,b]$ with
+$f(x)=0$. Consider $f(x)=x$ on $[-1,1]$. The smallest and only $x$
+where $f(x)=0$ is $0$.
+
+\vs
+
+\textbf{TODO:} multiple $x$'s, but no \textit{smallest}.
+
+\vs
+
+\textbf{TODO}
 
 \subsection*{Problem 5a}
 Suppose that $y-x>1$. Prove that there is an integer $k$ such that
