--- a/hw/ch7.tex
+++ b/hw/ch7.tex
@@ -10,17 +10,27 @@ isn't closed.)
 
 (i) $f(x)=x^{2}$ on $(-1,1)$
 
+Bounded above and below, and takes on min value. Note $f$ doesn't take
+on the maximum value in $(-1,1)$. I.e. there is no $y$ in $(-1,1)$
+such that $f(y)\geq f(x)$ for all $x$ in $(-1,1)$.
+
 \vs
 
 (ii) $f(x)=x^{3}$ on $(-1,1)$
+
+Bounded above and below.
 
 \vs
 
 (iii) $f(x)=x^{2}$ on $\R$
 
+Bounded below and takes on min value.
+
 \vs
 
 (iv) $f(x)=x^{2}$ on $[0, \infty)$
+
+Bounded below and takes on min value.
 
 \vs
 
@@ -29,7 +39,7 @@ isn't closed.)
   a+2, x>a
 \end{cases}$ on $(-a-1, a+1)$.
 
-(It will be necessary to consider several possibilities for $a$.)
+First, we want $a+1>-a-1$, thus $a>-1$.
 
 \vs
 
@@ -75,13 +85,30 @@ Prove that there is some number $x$ such that
 
 \vs
 
+Consider $f(x)=x^{179}+\frac{163}{1+x^{2}+\sin^{2} x}-119$. Observe
+that $f(-1)<0$ and $f(0)>0$. Thus by intermediate value theorem there
+exists $y$ in $[-1,0]$ such that $f(y)=0$.
+
+\vs
+
 (ii) $\sin x = x-1$
+
+\vs
+
+Consider $f(x)=\sin x-x+1$. Observe that $f(-5)>0$ and $f(5)<0$. Thus
+by intermediate value theorem there exists $y$ in $[-5,5]$ such that
+$f(y)=0$.
 
 \subsection*{Problem 5}
 Suppose that $f$ is continuous on $[a,b]$ and that $f(x)$ is always
 rational. What can be said about $f$?
 
 \subsection*{Solution}
+$f(x)=c, c\in\mathcal{Q}$. For suppose this isn't the case. Then there exist
+$x,y$ such that $f(x)=a$ and $f(y)=b$, and $a\neq b$. Let $d$ be
+irrational and $a<d<b$. By intermediate value theorem there exists $z$
+in $[x, y]$ such that $f(z)=d$. But $f$ is always rational, so we have
+a contradiction.
 
 \subsection*{Problem 17}
 Suppose that $f$ is a continuous function with $f(x)>0$ for all $x$,
@@ -89,6 +116,17 @@ and $\lim_{x\to\infty} f(x)=0=\lim_{x\to-\infty} f(x)$. (Draw a picture.) Prove 
 there is some number $y$ such that $f(y)\geq f(x)$ for all $x$.
 
 \subsection*{Solution}
+Let $a=f(0)$. By limit definition:
+\begin{itemize}
+\item There exists $N_1<0$ such that $f(x)<a$ for all $x$ in $(-\infty, N_1)$.
+\item There exists $N_2>0$ such that $f(x)<a$ for all $x$ in $(N_2, \infty)$.
+\end{itemize}
+
+By extreme value theorem there is some $y$ in $[N_1, N_2]$ such that
+$f(y)\geq f(x)$ for all $x$ in $[N_1, N_2]$. Observe that $f(y)\geq a$,
+otherwise $f(y)$ wouldn't be a maximum. Thus $f(y)\ge f(x)$ for all
+$x\in\mathcal{R}$, as desired.
+
 
 %%% Local Variables:
 %%% TeX-master: "hw"
