--- a/notes/completeness.tex
+++ b/notes/completeness.tex
@@ -259,7 +259,8 @@ Let $x,y\in\mathcal{R}$. Then $S$ is a \textbf{dense subset} of
 $\mathcal{R}$ if there is an element of $S$ in $(x,y)$. Put differently, there
 is an element of $S$ between any two points in $\mathcal{R}$.
 \begin{itemize}
-\item Obviously $\mathcal{R}$ is a dense subset of itself.
+\item Obviously $\mathcal{R}$ is a dense subset of itself (if
+  $x,y\in\mathcal{R}$ then $\frac{x+y}{2}\in(x,y)$).
 \item Integers are not a dense subset of $\mathcal{R}$. E.g. there is no integer
   between $1.1$ and $1.9$.
 \item The set of positive numbers $\{x:x\in\mathcal{R}, x>0\}$ is not a dense
