--- a/hw/ch7.tex
+++ b/hw/ch7.tex
@@ -39,7 +39,8 @@ Bounded below and takes on min value.
   a+2, x>a
 \end{cases}$ on $(-a-1, a+1)$.
 
-First, we want $a+1>-a-1$, thus $a>-1$.
+\textbf{TODO}
+
 
 \vs
 
@@ -48,12 +49,17 @@ First, we want $a+1>-a-1$, thus $a>-1$.
   a+2, x\geq a
 \end{cases}$ on $[-a-1, a+1]$.
 
+\textbf{TODO}
+
 \vs
 
 (vii) $f(x)=\begin{cases}
   0, \text{$x$ is irrational}\\
   1/q \ \ \ x=p/q \text{ in lowest terms}
 \end{cases}$ on $[0, 1]$.
+
+Bounded below by $0$ and achieves it. Bounded above by $1$ and
+achieves it.
 
 \vs
 
@@ -62,6 +68,9 @@ First, we want $a+1>-a-1$, thus $a>-1$.
   1/q \ \ \ x=p/q \text{ in lowest terms}
 \end{cases}$ on $[0, 1]$.
 
+Bounded below by $0$ but doesn't achieve it. Bounded above by $1$ and
+achieves it.
+
 \vs
 
 (ix) $f(x)=\begin{cases}
@@ -69,12 +78,18 @@ First, we want $a+1>-a-1$, thus $a>-1$.
   -1/q \ \ \ x=p/q \text{ in lowest terms}
 \end{cases}$ on $[0, 1]$.
 
+Bounded above by $1$ and achieves it. Bounded below by $-1$ and
+achieves it.
+
 \vs
 
 (x) $f(x)=\begin{cases}
   x, \text{$x$ is rational}\\
   0 \ \ \ \text{$x$ is irrational}
 \end{cases}$ on $[0, a]$.
+
+Bounded below by $0$ and achieves it. Achieves maximum value if $a$ is
+rational, otherwise does not achieve it.
 
 
 \subsection*{Problem 3}
