--- a/hw/ch8.tex
+++ b/hw/ch8.tex
@@ -120,7 +120,20 @@ numbers with $a_{n+1}\leq a_{n}/2$. Prove that for any $\epsilon>0$ there is
 some $n$ with $a_{n}<\epsilon$.
 
 \subsection*{Solution}
+Observe that
+\begin{align*}
+  &a_2\leq \frac{a_1}{2}\\
+  &a_3\leq \frac{a_2}{2}\implies a_3\leq \frac{a_1}{4}=\frac{a_1}{2^2}\\
+  &a_4\leq \frac{a_3}{2}\implies a_4\leq\frac{a_1}{8}=\frac{a_1}{2^3}\\
+  &\ldots\\
+  &a_n\leq \frac{a_1}{2^{n-1}}
+\end{align*}
 
+Thus to find $a_n<\epsilon$, we must choose $n$ such that:
+\begin{align*}
+  &\frac{a_1}{2^{n-1}}<\epsilon\\
+  &\implies 2^{n-1}>\frac{a_1}{\epsilon}
+\end{align*}
 
 %%% Local Variables:
 %%% TeX-master: "hw"
