--- a/notes/continuity.tex
+++ b/notes/continuity.tex
@@ -113,7 +113,7 @@ first continuity, any $X$ close to $g(a)$ implies
 
 Thus $|f(g(x))-f(g(a))|<\epsilon$, as desired.
 
-\subsection{Appendix: Stars over Babylon}
+\subsection{Example: Stars over Babylon}
 Stars over Babylon is a modification of the Dirichlet function (see
 \ref{subsubsec:dirichlet}), defined as follows:
 \[
