--- a/notes/continuity2.tex
+++ b/notes/continuity2.tex
@@ -255,7 +255,7 @@ there is some $y$ in $[a,b]$ such that $-f(y)\geq-f(x)$ for all $x$ in
 $[a,b]$. But that means that $f(y)\leq f(x)$ for all $x$ in $[a,b]$. QED.
 
 
-\subsection{Appendix: IVT and EVT consequences}
+\subsection{IVT and EVT consequences}
 
 \textbf{Claim 1a:} Every positive number has a square root. I.e. if
 $\alpha>0$, then there is some number $x$ such that $x^{2}=\alpha$.
@@ -485,6 +485,10 @@ a minimum. Let that be $m$. There are three cases:
 \end{itemize}
 
 QED.
+
+\subsection{Uniform continuity}
+\textbf{TODO} (skipping until it comes up in Spivak or I hit it in
+Galvin's notes)
 
 %%% Local Variables:
 %%% TeX-master: "notes"
