--- a/notes/limits.tex
+++ b/notes/limits.tex
@@ -441,7 +441,7 @@ small as we like. Dividing both sides by $\frac{2}{|L|^2}$, we must
 make $|f(x)-L|<\frac{|L|^2\epsilon}{2}$. Thus we must fix
 $\delta=\min(\delta_1, \delta_2)$. QED.
 
-\subsection{Appendix: low-level proofs}
+\subsection{Low-level proofs}
 
 While high level theorems allow us to easily compute complicated
 limits, it's instructive to compute a few limits for complicated
