--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -34,6 +34,7 @@ is much less confusing than Spivak's.
 \input{continuity.tex}
 \input{completeness.tex}
 \input{continuity2.tex}
+\input{derivatives.tex}
 
 \end{document}
 
