differentiability implies continuity

--- a/notes/derivatives.tex
+++ b/notes/derivatives.tex
@@ -32,6 +32,15 @@ domain of $f''$ is all points $a$ such that $f'$ is differentiable at
 $a$. If $f''(a)$ exists, we say $f$ is \textit{twice differentiable}
 at $a.$
 
+\vs
+
+\textbf{Theorem:} if $f$ is differentiable at $a$, then $f$ is
+continuous at $a$.
+
+\vs
+
+\textbf{Proof: TODO}
+
 \subsection{Leibniz notation}
 
 The notation $f'$ is called Lagrange's notation.\footnote{Wikipedia
