--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -35,6 +35,8 @@ is much less confusing than Spivak's.
 \input{completeness.tex}
 \input{continuity2.tex}
 \input{derivatives.tex}
+\input{derivatives2.tex}
+\input{derivatives3.tex}
 
 \end{document}
 
