--- a/notes/derivatives.tex
+++ b/notes/derivatives.tex
@@ -1,5 +1,5 @@
 
-\section{Derivatives, Part I (The Fundamentals)}
+\section{Derivatives, Part I (Fundamentals)}
 
 \subsection{Formal definitions}
 
