--- a/notes/differentiation.tex
+++ b/notes/differentiation.tex
@@ -1,5 +1,5 @@
 
-\section{Derivatives, Part III (Consequences)}
+\section{Differentiation, Part I (Fundamentals)}
 
 %%% Local Variables:
 %%% TeX-master: "notes"
