--- a/notes/differentiation2.tex
+++ b/notes/differentiation2.tex
@@ -1,5 +1,5 @@
 
-\section{Derivatives, Part II (Consequences)}
+\section{Differentiation, Part II (Trig)}
 
 %%% Local Variables:
 %%% TeX-master: "notes"
