--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -35,8 +35,9 @@ is much less confusing than Spivak's.
 \input{completeness.tex}
 \input{continuity2.tex}
 \input{derivatives.tex}
+\input{differentiation.tex}
+\input{differentiation2.tex}
 \input{derivatives2.tex}
-\input{derivatives3.tex}
 
 \end{document}
 
