--- a/notes/continuity2.tex
+++ b/notes/continuity2.tex
@@ -1,4 +1,4 @@
-\section{Continuity, Part II}
+\section{Continuity, Part II (On an Interval)}
 
 \subsection{Intermediate Value Theorem}\label{ivt}
 \textbf{Theorem:} if $f$ is continuous on $[a,b]$ and $f(a)<0<f(b)$,
