--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -21,6 +21,7 @@ chapter 5, so the homework problems are inlined in the notes.
 \input{ch6.tex}
 \input{ch7.tex}
 \input{ch8.tex}
+\input{ch9.tex}
 
 \end{document}
 
