--- a/notes/derivatives.tex
+++ b/notes/derivatives.tex
@@ -7,8 +7,11 @@
 denoted $f'(a)$, is defined as:
 \[f'(a)=\lim_{h\to0}\frac{f(a+h)-f(a)}{h}\]
 
-There are \textit{two intuitions} to convey about the derivative:
+There are \textit{three intuitions} to convey about the derivative:
 \begin{itemize}
+\item \textit{Algebraic interpretation}. The derivative tells how
+  $f(a+h)$, the value of $f$ as small distance from $a$, changes
+  relative to $f(a)$ as $h$ becomes very small.
 \item \textit{Geometric interpretation}. Draw a line through points
   $(a, f(a))$ and $(a+h, f(a+h))$ for some small $h$. Then make $h$
   ``infinitely small''. Our $f'(a)$ is the slope of that line.
@@ -40,16 +43,37 @@ domain of $f''$ is all points $a$ such that $f'$ is differentiable at
 $a$. If $f''(a)$ exists, we say $f$ is \textit{twice differentiable}
 at $a$.
 
+\subsection{Differentiability implies continuity}
+
+We are about to prove an important theorem-- that differentiability
+implies continuity. To do that, we begin with a convenient (simple)
+lemma.
+
+\vs
+
+\textbf{Lemma:} $\lim_{x\to a}f(x)$ is equivalent to $\lim_{h\to
+  0}f(a+h)$.
+
+\textbf{Proof.} Let $x=a+h$. Then
+\begin{align*}
+  &\lim_{h\to0}f(a+h)\\
+  &\iff\lim_{x-a\to0}f(x)\\
+  &\iff\lim_{x\to a}f(x)
+\end{align*}
+
+Note that the last implication is true because
+\[0<|(x-a)-0|<\delta\iff 0<|x-a|<\delta\]
+QED.
+
 \vs
 
 \textbf{Theorem:} if $f$ is differentiable at $a$, then $f$ is
 continuous at $a$.
 
-\textbf{Proof: TODO} we must show that:
+\textbf{Proof.} We must show that:
 \[\lim_{x\to a}f(x)=f(a)\]
 
-Observe that $\lim_{x\to a}f(x)$ is equivalent to $\lim_{h\to 0}f(a+h)$.
-\textbf{Todo.} The proof is now straightforward:
+We begin as follows:
 \begin{align*}
   \lim_{h\to0}[f(a+h)-f(a)]&=\lim_{h\to0}\frac{f(a+h)-f(a)}{h}\cdot h\\
                          &=\lim_{h\to0}\frac{f(a+h)-f(a)}{h}\cdot \lim_{h\to
@@ -234,7 +258,14 @@ differentiable at $0$.
 
 \textbf{Example 4}
 
-Let $f(x)=\sqrt[3]{x}$.
+Let $f(x)=\sqrt[3]{x}$. Here $\frac{\sqrt[3]{h}}{h}$ plays out as
+follows:
+\[\frac{\sqrt[3]{h}}{h}=\frac{h^{1/3}}{h}=\frac{1}{h^{2/3}}=\frac{1}{{(\sqrt[3]{h})}^2}\]
+
+This expression becomes arbitrarily large as $h$ goes to $0$, i.e.
+$\lim_{h\to0}\frac{1}{{(\sqrt[3]{h})}^2}=\infty$. Thus $f$ is not
+differentiable at zero (or put differently, the tagent line to $f$ at
+$0$ is vertical).
 
 
 \subsubsection*{Second derivative}
@@ -242,10 +273,28 @@ We now come to our more subtle example-- a function that's
 differentiable in the first but not everywhere in the second
 derivative:
 
+\vs
+
+\textbf{Example 1}
+
+Let
 \[f(x)=\begin{cases}
   x^2,&x\geq0\\
   -x^2,&x\leq0
-  \end{cases}\]
+\end{cases}\]
+
+As we've seen in the quadratic functions example above,
+$\frac{dx^2}{dx}=2x$. By very similar logic, $\frac{d(-x^2)}{dx}=-2x$.
+Thus $f'(a)=2a$ if $a\geq0$, and $f'(a)=-2a$ if $a\leq0$. Or, put
+differently, $f'(x)=2|x|$.
+
+\vs
+
+So, $f'(0)=0$. But what about $f''(0)$? We've already seen that
+$g(x)=|x|$ is not differentiable, and by very similar logical,
+$f''(0)$ does not exist! So even a ``smooth looking'' function may not
+have a second derivative-- a fact that implies existence of a second
+derivative is a strong critereon for a function to satisfy.
 
 \subsection{Intersections}
 
