--- a/notes/derivatives.tex
+++ b/notes/derivatives.tex
@@ -14,7 +14,8 @@ There are \textit{three intuitions} to convey about the derivative:
   relative to $f(a)$ as $h$ becomes very small.
 \item \textit{Geometric interpretation}. Draw a line through points
   $(a, f(a))$ and $(a+h, f(a+h))$ for some small $h$. Then make $h$
-  ``infinitely small''. Our $f'(a)$ is the slope of that line.
+  ``infinitely small''. Our $f'(a)$ is the slope of that line. The
+  tagent line is a \textit{linear approximation} of $f$ near $a$.
 \item \textit{Physics interpretation}. Suppose $f(t)$ maps time to
   position of a car on a road (or of any object on a straight line).
   Suppose you want to know the average velocity between any two points
@@ -296,7 +297,26 @@ $f''(0)$ does not exist! So even a ``smooth looking'' function may not
 have a second derivative-- a fact that implies existence of a second
 derivative is a strong critereon for a function to satisfy.
 
-\subsection{Intersections}
+\subsection{Tangent lines}
+Spivak now handles a question---- how many times does a tagent line to
+$f$ at $a$ intersect the graph of $f$? He doesn't yet motivate the
+question, though I suspect he will at a later time (at which point I
+will come back and make a note of it here). To answer this question we
+must first find the linear equation that describes the tagent line,
+which we will now do. We'll then address the question of intersection
+for quadratic and cubic functions.
+
+\subsubsection*{Point-slope form}
+
+\subsubsection*{Intersections}
+
+\textbf{Quadratic functions.} For $f(x)=x^2$ we've seen that
+$f'(a)=2a$. How many times do the graphs of $f$ and $f'(a)$ intersect
+for some $a$?
+
+\vs
+
+\textbf{Cubic functions.}
 
 %%% Local Variables:
 %%% TeX-master: "notes"
