wrapping up the derivatives chapter

--- a/notes/derivatives.tex
+++ b/notes/derivatives.tex
@@ -361,6 +361,14 @@ $f(x)=g(x)$:
   &x^3-3a^2x+2a^3=0
 \end{align*}
 
+Factoring this in Mathematica, we get
+\[(a-x)^2(2a+x)=0\]
+
+Thus one of the solutions is $x=a$ (we already knew $(a, a^3)$ is a
+point of intersection-- we explicitly constructed the tangent line at
+this point). The other solution is $x=-2a$, and thus the other point
+of intersection is $(-2a, -8a^3)$.
+
 %%% Local Variables:
 %%% TeX-master: "notes"
 %%% End:
